# CaTxGNN

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: indexnow.yml  news-monitor.yml
config/: fields.yaml
data/news/: ca_news_latest.json  matched_news.json  synonyms.json
docs/: CNAME  _config.yml  index.md  robots.txt
docs/_drugs/: abacavir.md  abatacept.md  abemaciclib.md  abiraterone.md  acarbose.md  acebutolol.md  acetaminophen.md  acetazolamide.md  acetic_acid.md  acetylcysteine.md  acetylsalicylic_acid.md  acitretin.md  acyclovir.md  adalimumab.md  adapalene.md  adenine.md  adenosine.md  aflibercept.md  alanine.md  alectinib.md  alfacalcidol.md  alglucosidase_alfa.md  alirocumab.md  alitretinoin.md  allopurinol.md  almotriptan.md  alpelisib.md  alprazolam.md  alprostadil.md  alteplase.md  aluminum_hydroxide.md  ambrisentan.md  amcinonide.md  amg-510.md  amifampridine.md  amikacin.md  aminophylline.md  amlodipine.md  ammonium_chloride.md  amoxicillin.md  (+459 more)
docs/_includes/: head_custom.html
docs/_news/: anifrolumab.md  bempedoic_acid.md  bimekizumab.md  carbon_monoxide.md  cromoglicic_acid.md  dornase_alfa.md  dostarlimab.md  efinaconazole.md  evinacumab.md  hexaminolevulinate.md  lecanemab.md  lumacaftor.md  lurbinectedin.md  norethindrone_enanthate.md  nusinersen.md  olsalazine.md  plecanatide.md  protamine_sulfate.md  teplizumab.md  (+6 more)
prompts/: pharmacist_v5_storytelling.md
scripts/: batch_collect_bundles.py  batch_generate_reports.py  drug_list.json  generate_drug_pages.py  generate_fhir_resources.py  run_kg_prediction.py
(+50792 files in other folders)
